Add tasks solution

--- a/client/src/components/Header/Header.module.sass
+++ b/client/src/components/Header/Header.module.sass
@@ -45,6 +45,7 @@
 
       .nav
         display: flex
+        flex-direction: row
 
         ul
           margin: 0
@@ -251,4 +252,3 @@
       letter-spacing: 0.3px
       color: lightyellow
       text-decoration: underline
-
