--- a/client/src/components/Layout/AuthHeader/AuthHeader.module.sass
+++ b/client/src/components/Layout/AuthHeader/AuthHeader.module.sass
@@ -28,6 +28,16 @@
   font-weight: bold
   height: 40px
   text-decoration: none
+  border: none
+
 
   span
     color: white
+
+.registerBtn 
+  background-color: #3ea9f5
+  font-weight: bold
+  color: white
+  border: 1px solid white
+  padding: 10px
+  border-radius: 10px
